Changed folder structure to use Github Pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Portfolio page for Luis Carlos Ordonez</title>
-  <link rel="stylesheet" href="../dist/main.css" />
+  <link rel="stylesheet" href="dist/main.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
